# inky

./: .coveragerc  .gitignore  .stickler.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  MANIFEST.in  Makefile  README.md  README_CPP.md  check.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt  tox.ini  uninstall.sh
.github/workflows/: build.yml  install.yml  python-2.7.yml  python-3.5.yml  python-3.7.yml  qa.yml  test.yml
cmake/toolchains/: rpi-aarch64.cmake  rpi-armhf.cmake
docs/: cpp-port-structure.md  porting-status.md
examples/: clean.py  e673_show.cpp  identify.py  logo-mock.py  logo-what.py  logo.py  name-badge.py  test.py
examples/7color/: buttons.py  clear.py  colour-palette.py  cycle.py  graph.py  image.py  stripes.py
examples/7color/advanced/: dither.py
examples/7color/html/: README.md  hello-world.html  html.sh
examples/7color/images/: girldoomscrolling.jfif
examples/phat/: calendar-phat.py  hello-world-4-colour.py  hello.py  hello.py~  logo.py  no_reasons.py  weather-phat-mock.py  weather-phat.py
examples/spectra6/: hello_world.py  led.py  stripes.py
examples/spectra6/comics/: README.md  comicvine_comic.py  config.py.example  metron_comic.py
examples/tests/: border.py
examples/what/: cal.py  dither-image-what-1683.py  dither-image-what.py  hello-world-4-colour.py  logo-what.py  quotes-what.py  quotes.py
examples/what/last-fm-example/: README.md  go_ink.py  lastfm_user_data.py
fonts/: MANIFEST.in  setup.py
fonts/inky/: __init__.py
fonts/inky/fonts/: __init__.py
hardware/: Inky_pHAT.fzpz
include/inky/: e673.hpp  hardware.hpp
inky/: __init__.py  auto.py  eeprom.py  inky.py  inky_ac073tc1a.py  inky_e640.py  inky_e673.py  inky_el133uf1.py  inky_jd79661.py  inky_jd79668.py  inky_ssd1608.py  inky_ssd1683.py  inky_uc8159.py  mock.py  ssd1608.py  ssd1683.py
reference/python/: README.md  pyproject.toml
reference/python/driver/inky/: __init__.py  auto.py  inky_jd79661.py  inky_jd79668.py  inky_ssd1683.py  phat.py
reference/python/examples/: identify.py
reference/python/examples/7color/: cycle.py  graph.py
reference/python/examples/spectra6/: buttons.py  led.py  stripes.py
reference/python/examples/what/: dither-image-what.py
reference/python/notes/: moved-files.md
reference/python/scripts/: install.sh
reference/python/tests/: test_init.py  test_set_image.py
sphinx/: conf.py  index.rst  inky.rst  phat.rst  requirements.txt  what.rst
sphinx/_static/: custom.css
sphinx/_templates/: layout.html
src/: e673.cpp  hardware.cpp
tests/: conftest.py  test_auto.py  test_e673.py  test_eeprom.py  test_init.py  test_install_helpers.py  test_simulator.py
tools/: inky-palette-4-colour.gpl  inky-palette-alt.gpl  inky-palette.gpl
